# emu

./: .gitignore  emu3_config.json  pyproject.toml
src/emu/: __init__.py
src/emu/fa2_mask/: fa2_bwd.py  fa2_custom_mask.py  fa2_fwd.py
src/emu/mllm/: configuration_emu3.py  kvcache.py  modeling_emu3.py  modeling_llama.py  parallel.py  processor.py  utils_emu3.py
src/emu/run/: batched.py  flex_attn.py  geneval.py  ground_truth_comparison.py  utils.py
